stopped events page overlapping on mobile sizes
overlap stop

--- a/styles/EventDetails.module.css
+++ b/styles/EventDetails.module.css
@@ -93,6 +93,7 @@
     .hdn1,
     .hdn2,
     .desc,
+    .date,
     .contact {
         text-align: center;
     }
