--- a/styles/EventHeading.module.css
+++ b/styles/EventHeading.module.css
@@ -36,6 +36,7 @@
     font-weight: 500;
     font-size: 1.75rem;
     padding-left: 0.25em;
+    padding-right: 0.25em;
     width: 80%;
 }
 .image img {
